Fix participant label overflow

--- a/res/css/views/voip/GroupCallView/_VideoGrid.scss
+++ b/res/css/views/voip/GroupCallView/_VideoGrid.scss
@@ -25,6 +25,7 @@ limitations under the License.
         border-radius: 20px;
         overflow: hidden;
         border: 3px solid transparent;
+        cursor: pointer;
 
         * {
             touch-action: none;
@@ -52,7 +53,8 @@ limitations under the License.
             justify-content: center;
             border-radius: 8px;
             user-select: none;
-            cursor: pointer;
+            max-width: calc(100% - 48px);
+            overflow: hidden;
 
             & > * {
                 margin-right: 8px;
@@ -66,6 +68,9 @@ limitations under the License.
                 font-size: 15px;
                 font-weight: 600;
                 line-height: 32px;
+                text-overflow: ellipsis;
+                overflow: hidden;
+                white-space: nowrap;
             }
         }
 
@@ -79,6 +84,7 @@ limitations under the License.
             background-color: white;
             height: 16px;
             width: 16px;
+            flex-shrink: 0;
         }
 
         .mx_muteMicIcon {
